--- a/variable_final_1.ipynb
+++ b/variable_final_1.ipynb
@@ -408,18 +408,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from astropy.io import fits\n",
+    "\n",
     "# Read the pulsar candidates\n",
     "candidates_day_1 = pd.read_csv('Pulsar_candidates_G033.0-5.0.csv')\n",
     "\n",
-    "\n",
-    "#Step 1 : Extract the x_pos and y_pos for the candidates in the image : \n",
-    "#x_pos_day_1 = candidates_day_1[' Xposn']\n",
-    "#y_pos_day_1 = candidates_day_1[' Yposn']\n",
-    "#Peak_flux_day_1 = candidates_day_1[' Peak_flux']\n",
-    "# Assuming 'source_mask' represents the approximate source size in degrees\n",
-    "#source_mask = candidates_day_1[' Maj'] + candidates_day_1[' Min']\n",
-    "\n",
-    "# Load FITS file for day 2\n",
+    "# Load FITS file\n",
     "day_2_fits_file = 'G033.0-5.0_mod2.FITS'\n",
     "day_2_hdul = fits.open(day_2_fits_file)\n",
     "day_2_data = day_2_hdul[0].data\n",
@@ -433,7 +426,7 @@
     "\n",
     "\n",
     "\n",
-    "# Extract pixel values at candidate positions within the defined source size\n",
+    "# eextract pixel values at candidate positions within a mask\n",
     "candidate_pixel_values = []\n",
     "\n",
     "for i in range(len(candidates_day_1)): \n",
@@ -443,7 +436,8 @@
     "\tsource_mask = (candidates_day_1[' Maj'][i] + candidates_day_1[' Min'][i])/2 #Source size in degrees\n",
     "\tsource_mask_pixels = source_mask / pixel_scale_degrees_per_pixel # Convert source size from degrees to pixels\n",
     "\t#Source extraction \n",
-    "\t# Print out debugging information\n",
+    "\t\n",
+    "\t#out statement \n",
     "\tprint(f\"Candidate {i+1}: X={x_pos_day_1}, Y={y_pos_day_1}, Source Mask (degrees)={source_mask}, Source Mask (pixels)={source_mask_pixels}\")\n",
     "\t\n",
     "\t# Calculate source boundaries\n",
@@ -452,27 +446,27 @@
     "\ty_start = max(int(y_pos_day_1 - source_mask_pixels / 2), 0)\n",
     "\ty_end = min(int(y_pos_day_1 + source_mask_pixels / 2), day_2_data.shape[2])\n",
     "    \n",
-    "    \t# Extract source values\n",
+    "    # Extract source values\n",
     "\tsource_values = day_2_data[0, 0, y_start:y_end, x_start:x_end]\n",
     "    \n",
     "\tcandidate_pixel_values.append(source_values)\n",
     "\n",
     "\t# Print pixel values for the current candidate\n",
     "\tprint(f'Candidate {i+1} Pixel Values:')\n",
-    "\t# Choose a candidate index for visualization (e.g., candidate 7)\n",
     "\n",
-    "\t# Get the flux values for the chosen candidate\n",
     "\tflux_values = candidate_pixel_values[i]\n",
-    "\n",
-    "\t# Create a heatmap (2D array plot) of the flux values\n",
+    "\t\n",
+    "    # plotting each candidate (this was just for my visualization)\n",
+    "\t# Create a heatmap\n",
     "\tplt.figure(figsize=(8, 6))\n",
     "\tplt.imshow(flux_values, cmap='viridis', origin='lower', aspect='auto')\n",
     "\tplt.colorbar(label='Flux')\n",
-    "\t# Get the x and y coordinates of the region\n",
+    "\n",
+    "\t# x and y coordinates of the region\n",
     "\tx_coords = np.arange(x_start, x_end)\n",
     "\ty_coords = np.arange(y_start, y_end)\n",
     "\n",
-    "# Display actual pixel coordinates on the x and y axes\n",
+    "    # pixel co-ordinates\n",
     "\tplt.xticks(ticks=np.arange(len(x_coords)), labels=x_coords)\n",
     "\tplt.yticks(ticks=np.arange(len(y_coords)), labels=y_coords)\n",
     "\n",
