--- a/candidate_variabilty_crossmatch_final.ipynb
+++ b/candidate_variabilty_crossmatch_final.ipynb
@@ -153,51 +153,46 @@
     "\n",
     "# Load all pulsar candidate files for n days into a list of DataFrames #Remember to change the SIBF to get  MJD in candidate name file. \n",
     "n_epochs = 4  # Change this to the actual number of days/MJD\n",
-    "candidates = []\n",
+    "candidates =[]\n",
     "# Move the list initialization outside the outer loop\n",
     "peak_flux_values = []\n",
     "e_peak_flux_values = []\n",
     "rms_local_values = []\n",
     "\n",
     "for epoch in range(n_epochs):\n",
-    "    filename = f'Pulsar_candidates_G033.0-5.0_{epoch+1}.csv'\n",
+    "    filename = f'Pulsar_candidates_G033.0-5.0_{epoch+1}.csv' # this should work for observed sources as well ! need to check \n",
     "    candidates.append(pd.read_csv(filename))\n",
     "\n",
     "#print(candidates)\n",
     "\n",
     "matched_sources = []\n",
     "\n",
-    "# loop through each day\n",
+    "# loop each day\n",
     "for j in range(1, n_epochs):\n",
     "    candidates_day_1 = candidates[0]\n",
     "    candidates_day_j = candidates[j]\n",
     "\n",
     "\n",
-    "    # loop through each source in candidates_day_1\n",
     "    for idx_i in range(len(candidates_day_1)):\n",
     "        ra_i = candidates_day_1[' RA'][idx_i]\n",
     "        dec_i = candidates_day_1[' DEC'][idx_i]\n",
     "        source_mask_i = (candidates_day_1[' Maj'][idx_i] + candidates_day_1[' Min'][idx_i])/2  # source size in degrees visuslly confirmed on ds9\n",
     "\n",
-    "        # initiate flag \n",
     "        match_found = False\n",
     "\n",
     "        for idx_j in range(len(candidates_day_j)):  # loop through each source in candidates_day_j\n",
     "            ra_j = candidates_day_j[' RA'][idx_j]\n",
-    "            dec_j = candidates_day_j[' DEC'][idx_j]\n",
+    "            dec_j =candidates_day_j[' DEC'][idx_j]\n",
     "\n",
     "            # the angular separation between the two sources (with day_1 only)\n",
     "            if ra_i == ra_j and dec_i == dec_j:\n",
-    "                theta = 0.0\n",
+    "                theta =0.0\n",
     "            else:\n",
     "                theta = np.degrees(\n",
-    "                    np.arccos(np.sin(np.radians(dec_i)) * np.sin(np.radians(dec_j)) +\n",
-    "                            np.cos(np.radians(dec_i)) * np.cos(np.radians(dec_j)) * np.cos(\n",
-    "                                np.radians(ra_i - ra_j))))\n",
+    "                    np.arccos(np.sin(np.radians(dec_i))*np.sin(np.radians(dec_j)) +np.cos(np.radians(dec_i)) *np.cos(np.radians(dec_j)) * np.cos(np.radians(ra_i -ra_j))))\n",
     "\n",
     "            # if the angular separation is within the constraint\n",
     "            if abs(theta) <= source_mask_i:\n",
-    "                # Extract source parameters for each day\n",
     "                sources_data = []\n",
     "\n",
     "                for day_idx in range(n_epochs):\n",
@@ -210,7 +205,6 @@
     "                    rms_l = day_candidates[' Isl_rms'][source_idx]\n",
     "                    sources_data.extend([ra, dec, peak_flux, e_peak_flux, rms_l])\n",
     "\n",
-    "                    # append required values \n",
     "                    peak_flux_values.append(peak_flux)\n",
     "                    e_peak_flux_values.append(e_peak_flux)\n",
     "                    rms_local_values.append(rms_l)\n",
@@ -219,11 +213,9 @@
     "                match_found = True\n",
     "                break   #match is found\n",
     "\n",
-    "        # Check if a match is found before appending sources_data\n",
     "        if match_found:\n",
     "            matched_sources.append(sources_data)\n",
     "\n",
-    "# Generate column names dynamically for all n days\n",
     "columns = []\n",
     "for day_idx in range(n_epochs):\n",
     "    day_prefix = f'epoch_{day_idx + 1}'\n",
@@ -231,11 +223,9 @@
     "        columns.append(f'{day_prefix}_{param}')\n",
     "\n",
     "matched_sources_df = pd.DataFrame(matched_sources, columns=columns)\n",
-    "#print(matched_sources_df)\n",
     "\n",
     "\n",
     "num_candidates = len(candidates_day_1)\n",
-    "# Create a dictionary to store lists for each candidtate \n",
     "peak_flux = {}\n",
     "e_peak_flux={}\n",
     "Isl_rms = {}\n",
@@ -259,7 +249,6 @@
     "\n",
     "    #print(candidate_peak_flux_j) print out statement \n",
     "\n",
-    "    # current epoch is stored \n",
     "    peak_flux[f'candidate_{j}'] = candidate_peak_flux_j\n",
     "    e_peak_flux[f'candidate_{j}'] = candidate_e_peak_flux_j\n",
     "    Isl_rms[f'candidate_{j}'] = candidate_Isl_rms_j\n",
@@ -277,7 +266,7 @@
     "    candidate_rms_l = Isl_rms[f'candidate_{j}'][0]\n",
     "  \n",
     "    # variability statistics (check formula #1)\n",
-    "    sbar = np.sum(np.array(candidate_peak_flux) / np.array(candidate_rms_l) ** 2) / np.sum(1 / np.array(candidate_rms_l) ** 2)\n",
+    "    sbar = np.sum(np.array(candidate_peak_flux) /np.array(candidate_rms_l) **2) / np.sum(1/ np.array(candidate_rms_l)** 2)\n",
     "    # for global variability replace rms_l with rms_bkg (this needs clarification)\n",
     "    std_deviation = np.std(candidate_peak_flux)\n",
     "\n",
@@ -299,7 +288,6 @@
     "# peak_flux vs epochs for the current candidate\n",
     "    plt.plot(epochs, candidate_peak_flux, marker='o',linestyle = '--',label=f'Candidate {j} $\\\\chi^2_r$ = {chi_sq_r}')\n",
     "    plt.errorbar(epochs, candidate_peak_flux,yerr=candidate_e_peak_flux,color = 'black',barsabove=True)\n",
-    "    # Add labels and legend\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Peak Flux')\n",
     "    plt.title('Peak Flux Change with Epochs for Each Candidate')\n",
